[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfpage2image"
version = "1.0.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A simple Python utility to convert PDF pages to images"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
keywords = ["pdf", "image", "converter", "pages", "extract"]
dependencies = [
    "numpy>=1.19.0",
    "opencv-python>=4.5.0",
    "PyMuPDF>=1.18.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/pdfpage2image"
"Bug Reports" = "https://github.com/yourusername/pdfpage2image/issues"
"Source" = "https://github.com/yourusername/pdfpage2image"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdfpg2img*"] 